# teenycli

./: .gitignore  CHANGELOG.md  README.md  precommit.toml  pyproject.toml
teenycli/: __init__.py  teenycli.py
tests/: test_teenycli.py
tinycli/: tinycli.py
